footer overlapping bug solved

--- a/el-proyecte-grande/client-app/src/app/layout/styles.css
+++ b/el-proyecte-grande/client-app/src/app/layout/styles.css
@@ -16,7 +16,7 @@
 
 body {
   background-color: #EAEAEA !important;
-  
+  min-height: 100vh;
 
   
 }
@@ -89,6 +89,13 @@ body {
 /* End of navbar */
 
 
+.ui.attached:not(.message)+.ui.attached.segment:not(.top) {
+  margin-bottom: 50px;
+}
+
+.ui.segments:last-child {
+  margin-bottom: 50px !important;
+}
 /* Footer */
 
 
@@ -103,7 +110,7 @@ footer {
   width: 100%;
   bottom: 0;
   clear: both;
-  position: fixed;
+  position:fixed;
 }
 .footer .credits {
   display:block;
